--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <ul>
             <li><b>1.</b> Imbunatatirea si mentinerea starii de sanatate</li>
             <li><b>2.</b> Reducerea tensiunii arteriale, a colesterolului si a nivelului glucozei din sange</li>
-            <li><b>3.</b> Reducerea probabilitatii aparitiei unor boli cronice, cum ar fi diabetul, bolile de inima si osteoporoza
+            <li><b>3.</b> Reducerea probabilitatii aparitiei unor boli cronice, cum ar fi diabetul, bolile de inima si
+                osteoporoza
             </li>
             <li><b>4.</b> Mentinerea masei musculare si densitatii osoase</li>
             <li><b>5.</b> Reducerea stresului si imbunatatirea calitatii somnului</li>
@@ -28,9 +29,10 @@
             dumneavoastră folosește oxigenul pentru a alimenta mușchii care lucrează. În timp, exercițiile aerobice
             regulate vă condiționează sistemul cardiovascular să pompeze sângele și să distribuie oxigenul mai eficient
             în tot corpul.</p>
-        <video
-            src="content/15 min CARDIO AEROBICS WORKOUT _ All Standing _ Low Impact _ No Squats _ Move to the Beat ♫.mp4"
-            controls></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nDOXXIRQD3c?si=qmrH8S6uxXQEUT7t"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <hr>
     <div class="forta">
@@ -40,7 +42,10 @@
             cunoscut tip de antrenament de forță, dar puteți, de asemenea, să vă antrenați folosind benzi de rezistență,
             mingi medicinale sau propria greutate corporală. Exemple de exerciții de rezistență cu greutatea corporală
             includ flotări, planșete, fandări și ghemuiri.</p>
-        <video src="content/15 Мин РУКИ И ПЛЕЧИ ТРЕНИРОВКА С ГАНТЕЛЯМИ Дома.mp4" controls></video>
+        <iframe width="460" height="315" src="https://www.youtube.com/embed/1rZ3HWazmn4?si=YOnILr04SZOLkyHn"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <hr>
     <div class="flex">
@@ -51,14 +56,16 @@
             sau mai mult.<br>În schimb, întinderea dinamică implică mișcarea fluidă printr-o gamă de mișcări care să
             ducă fiecare articulație și grup muscular în toată gama lor. Întinderile dinamice provoacă ușor echilibrul
             și coordonarea.</p>
-        <video id="vid3" src="content/8 MIN UPPER BODY STRETCH - Daily Routine for a good posture, back & neck pain.mp4"
-            controls></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/oCNnybFq-mQ?si=ILjsAADaXdFdjya8"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <hr>
     <h5>Piese muzicale pentru fiecare tip de exercitii:</h5>
-        <audio src="content/Fuzzy Boot - Cold Blood Romance.mp3" controls></audio>
-        <audio src="content/Teddy Swims – Lose Control.mp3" controls></audio>
-        <audio src="content/Gibran Alcocer-Idea 22 -Slowed - Reverb--textmp3.ru.mp3" controls></audio>
+    <audio src="content/Fuzzy Boot - Cold Blood Romance.mp3" controls></audio>
+    <audio src="content/Teddy Swims – Lose Control.mp3" controls></audio>
+    <audio src="content/Gibran Alcocer-Idea 22 -Slowed - Reverb--textmp3.ru.mp3" controls></audio>
 </body>
 
 </html>
